fix default font to something more readable
The Raleway font can be unreadable in certain situations, and is
generally a terrible-looking font anyway.

Fixes #443

--- a/share/theme/default/css/statocles-default.css
+++ b/share/theme/default/css/statocles-default.css
@@ -3,6 +3,11 @@
  * Basic style
  ************************************************/
 
+body {
+    /* Raleway looks terrible, and in some cases is hard to read */
+    font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 h1 {
     font-size: 3.5em;
 }
